[UP] Change code language.

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -17,7 +17,7 @@
 [backend]
 
     ;data base
-    BASE = "fulo"
+    BASE = "db_joker"
     HOST = "localhost"
     PASS = "postgres"
     USER = "postgres"
