[UP] Inactive account customer, business origin.

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -37,3 +37,7 @@
     ;profile
     PROFILE_ADMINISTRATOR = "1"
     PROFILE_CUSTOMER = "2"
+
+    ;status
+    USER_ACTIVE = "1"
+    USER_INACTIVE = "2"
