[UP] Adjust switch button.

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -39,5 +39,5 @@
     PROFILE_CUSTOMER = "2"
 
     ;status
-    USER_ACTIVE = "1"
-    USER_INACTIVE = "2"
+    STATUS_ACTIVE = "1"
+    STATUS_INACTIVE = "2"
