--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -31,6 +31,7 @@
     MSG0001 = "Processo realizado com sucesso."
     MSG0002 = "Este email já está cadastrado."
     MSG0003 = "A senha não confere."
+    MSG0004 = "Acesso Negado"
 
 [both]
 
@@ -41,3 +42,7 @@
     ;status
     STATUS_ACTIVE = "1"
     STATUS_INACTIVE = "2"
+
+    ;results
+    ACCESS_DENIED = "Acesso negado"
+    EMAIL_ALREADY = "E-mail Existente"
