--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -10,6 +10,7 @@ browser.autorefresh.Chromium.INTEGRATED=true
 browser.highlightselection.Chromium.INTEGRATED=true
 file.reference.dev-fulo-angular=.
 file.reference.dev-sales-client-1=.
+file.reference.projects-fulo-angular=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.dev-sales-client-1}
 start.file=index.html
