[ADD] Log, cors, middleware of acl and secret.

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -17,40 +17,41 @@
 [backend]
 
     ;data base
-    BASE = "db_joker"
-    HOST = "localhost"
-    PASS = "postgres"
-    USER = "postgres"
+    BASE = db_joker
+    HOST = localhost
+    PASS = postgres
+    USER = postgres
 
     ;encryption
-    ENCRYPT_SALT = "F1u2L3o@4P5a6t7c8h9W0o1r2k3" ; salt used to encrypt data.
+    ENCRYPT_SALT = F1u2L3o@4P5a6t7c8h9W0o1r2k3 ; salt used to encrypt data.
 
     ;operations
-    OP_ADD_USER = "1"
-    OP_UP_USER = "2"
-    OP_UP_ACCESS = "3"
-    OP_INACTIVATE_USER = "4"
-    OP_ACTIVATE_USER = "5"
-    OP_UP_ADDRESS = "6"
+    OP_ADD_USER = 1
+    OP_UP_USER = 2
+    OP_UP_ACCESS = 3
+    OP_INACTIVATE_USER = 4
+    OP_ACTIVATE_USER = 5
+    OP_UP_ADDRESS = 6
 
 [frontend]
 
     ;messages
-    MSG0001 = "Processo realizado com sucesso."
-    MSG0002 = "Este email já está cadastrado."
-    MSG0003 = "A senha não confere."
-    MSG0004 = "Acesso Negado"
+    MSG0001 = Processo realizado com sucesso.
+    MSG0002 = Este email já está cadastrado.
+    MSG0003 = A senha não confere.
+    MSG0004 = Acesso Negado
 
 [both]
 
     ;profile
-    PROFILE_ADMINISTRATOR = "1"
-    PROFILE_CUSTOMER = "2"
+    PROFILE_ADMINISTRATOR = 1
+    PROFILE_CUSTOMER = 2
+    PROFILE_GUEST = 3
 
     ;status
-    STATUS_ACTIVE = "1"
-    STATUS_INACTIVE = "2"
+    STATUS_ACTIVE = 1
+    STATUS_INACTIVE = 2
 
     ;results
-    ACCESS_DENIED = "Acesso negado"
-    EMAIL_ALREADY = "E-mail Existente"
+    ACCESS_DENIED = Acesso negado
+    EMAIL_ALREADY = E-mail Existente
