--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -31,7 +31,10 @@
     MSG0001 = Processo realizado com sucesso.
     MSG0002 = Este email já está cadastrado.
     MSG0003 = A senha não confere.
-    MSG0004 = Acesso Negado
+    MSG0004 = Acesso Negado.
+    MSG0005 = Este item já está em sua lista de desejos.
+    MSG0006 = Este item já está em seu carrinho de compras.
+    MSG0007 = Você precisa entrar para adicionar intem na lista de desejos.
 
 [both]
 
@@ -47,3 +50,4 @@
     ;results
     ACCESS_DENIED = Acesso negado
     EMAIL_ALREADY = E-mail Existente
+    WISHLIST_ALREADY = Desejo Existente
