[UP] Product adjusts

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -35,6 +35,7 @@
     MSG0005 = Este item já está em sua lista de desejos.
     MSG0006 = Este item já está em seu carrinho de compras.
     MSG0007 = Você precisa entrar para adicionar intem na lista de desejos.
+    MSG0008 = Não foi encontrado resultados.
 
 [both]
 
@@ -51,3 +52,4 @@
     ACCESS_DENIED = Acesso negado
     EMAIL_ALREADY = E-mail Existente
     WISHLIST_ALREADY = Desejo Existente
+    WITHOUT_RESULT = Sem resultado
