[ADD] Type of product

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -36,6 +36,7 @@
     MSG0006 = Este item já está em seu carrinho de compras.
     MSG0007 = Você precisa entrar para adicionar intem na lista de desejos.
     MSG0008 = Não foi encontrado resultados.
+    MSG0009 = Não foi possivel deletar o tipo de produto, pois este está em uso.
 
 [both]
 
@@ -53,3 +54,4 @@
     EMAIL_ALREADY = E-mail Existente
     WISHLIST_ALREADY = Desejo Existente
     WITHOUT_RESULT = Sem resultado
+    PRODUCT_TYPE_BUSY = Tipo de produto em uso
