--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -25,6 +25,13 @@
     ;encryption
     ENCRYPT_SALT = F1u2L3o@4P5a6t7c8h9W0o1r2k3 ; salt used to encrypt data.
 
+    ;data for farevalue and delivery
+    BOX_DELIVERY_MIN_LENGTH = 8
+    BOX_DELIVERY_MIN_WIDTH = 8
+    BOX_DELIVERY_MIN_WEIGHT = 8
+    BOX_DELIVERY_MIN_HEIGHT = 8
+    ORIGIN_POSTCODE = 72316017
+
 [frontend]
 
     ;messages
@@ -54,4 +61,9 @@
     EMAIL_ALREADY = E-mail Existente
     WISHLIST_ALREADY = Desejo Existente
     WITHOUT_RESULT = Sem resultado
-    PRODUCT_TYPE_BUSY = Tipo de produto em uso
+    PRODUCT_TYPE_BUSY = Tipo em uso
+
+    ;numbers
+    NUMBER_ZERO = 0
+    NUMBER_ONE = 1
+    NUMBER_TWO = 2
