[ADD] Fare value

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -26,10 +26,17 @@
     ENCRYPT_SALT = F1u2L3o@4P5a6t7c8h9W0o1r2k3 ; salt used to encrypt data.
 
     ;data for farevalue and delivery
-    BOX_DELIVERY_MIN_LENGTH = 8
-    BOX_DELIVERY_MIN_WIDTH = 8
-    BOX_DELIVERY_MIN_WEIGHT = 8
-    BOX_DELIVERY_MIN_HEIGHT = 8
+    BOX_DELIVERY_MIN_LENGTH = 16
+    BOX_DELIVERY_MIN_WIDTH = 11
+    BOX_DELIVERY_MIN_HEIGHT = 2
+    BOX_DELIVERY_MIN_WEIGHT = 001
+    BOX_DELIVERY_MAX_LENGTH = 105
+    BOX_DELIVERY_MAX_WIDTH = 105
+    BOX_DELIVERY_MAX_HEIGHT = 105
+    BOX_DELIVERY_MAX_WEIGHT = 30
+    BOX_DELIVERY_BEST_LENGTH = 80
+    BOX_DELIVERY_BEST_WIDTH = 80
+    BOX_DELIVERY_BEST_HEIGHT = 9
     ORIGIN_POSTCODE = 72316017
 
 [frontend]
@@ -44,6 +51,9 @@
     MSG0007 = Você precisa entrar para adicionar intem na lista de desejos.
     MSG0008 = Não foi encontrado resultados.
     MSG0009 = Não foi possivel deletar o tipo de produto, pois este está em uso.
+
+    ;currency
+    CURRENCY_SYMBOL = R$
 
 [both]
 
