[ADD] Fare value

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -51,9 +51,8 @@
     MSG0007 = Você precisa entrar para adicionar intem na lista de desejos.
     MSG0008 = Não foi encontrado resultados.
     MSG0009 = Não foi possivel deletar o tipo de produto, pois este está em uso.
-
-    ;currency
-    CURRENCY_SYMBOL = R$
+    MSG0010 = Você precisa entrar para efetuar a compra.
+    MSG0011 = Você precisa cadastrar o endereço para entrega antes de efetuar a compra.
 
 [both]
 
