[UP] Fare value

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -34,6 +34,7 @@
     BOX_DELIVERY_MAX_WIDTH = 105
     BOX_DELIVERY_MAX_HEIGHT = 105
     BOX_DELIVERY_MAX_WEIGHT = 30
+    BOX_DELIVERY_MAX_PACKAGE_SIZE = 200
     BOX_DELIVERY_BEST_LENGTH = 80
     BOX_DELIVERY_BEST_WIDTH = 80
     BOX_DELIVERY_BEST_HEIGHT = 9
