[UP] Confirmation buy

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -54,6 +54,7 @@
     MSG0009 = Não foi possivel deletar o tipo de produto, pois este está em uso.
     MSG0010 = Você precisa entrar para efetuar a compra.
     MSG0011 = Você precisa cadastrar o endereço para entrega antes de efetuar a compra.
+    MSG0012 = 'O CEP pesquisado tem que ser igual ao CEP cadastrado no perfil.'
 
 [both]
 
