--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -43,18 +43,19 @@
 [frontend]
 
     ;messages
-    MSG0001 = Processo realizado com sucesso.
-    MSG0002 = Este email já está cadastrado.
-    MSG0003 = A senha não confere.
-    MSG0004 = Acesso Negado.
-    MSG0005 = Este item já está em sua lista de desejos.
-    MSG0006 = Este item já está em seu carrinho de compras.
-    MSG0007 = Você precisa entrar para adicionar intem na lista de desejos.
-    MSG0008 = Não foi encontrado resultados.
-    MSG0009 = Não foi possivel deletar o tipo de produto, pois este está em uso.
-    MSG0010 = Você precisa entrar para efetuar a compra.
-    MSG0011 = Você precisa cadastrar o endereço para entrega antes de efetuar a compra.
+    MSG0001 = 'Processo realizado com sucesso.'
+    MSG0002 = 'Este email já está cadastrado.'
+    MSG0003 = 'A senha não confere.'
+    MSG0004 = 'Acesso Negado.'
+    MSG0005 = 'Este item já está em sua lista de desejos.'
+    MSG0006 = 'Este item já está em seu carrinho de compras.'
+    MSG0007 = 'Você precisa entrar para adicionar intem na lista de desejos.'
+    MSG0008 = 'Não foi encontrado resultados.'
+    MSG0009 = 'Não foi possivel deletar o tipo de produto, pois este está em uso.'
+    MSG0010 = 'Você precisa entrar para efetuar a compra.'
+    MSG0011 = 'Você precisa cadastrar o endereço para entrega antes de efetuar a compra.'
     MSG0012 = 'O CEP pesquisado tem que ser igual ao CEP cadastrado no perfil.'
+    MSG0013 = 'O correu um erro durante a operação. Por favor tente novamente em instantes.'
 
 [both]
 
@@ -68,6 +69,7 @@
     STATUS_INACTIVE = 2
 
     ;results
+    ERROR = Ocorreu um erro
     ACCESS_DENIED = Acesso negado
     EMAIL_ALREADY = E-mail Existente
     WISHLIST_ALREADY = Desejo Existente
