--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -40,6 +40,19 @@
     BOX_DELIVERY_BEST_HEIGHT = 9
     ORIGIN_POSTCODE = 72316017
 
+    ;paypal
+    ;sandbox
+    PAYPAL_USER = 'victor.eduardo.barreto-vendedor_api3.gmail.com'
+    PAYPAL_PASS = 'BWJSZCTZTKKR3Y8M'
+    PAYPAL_SIGNATURE = 'AZIcjJZn87JqIU7WrCzwyhDK1f92AvpiPkiSUC9il1RbLSAVcDNq8si4'
+    PAYPAL_URL = 'https://www.sandbox.paypal.com/cgi-bin/webscr'
+    PAYPAL_VERSION = '108.0'
+
+    ;production
+    ;PAYPAL_URL = 'https://www.paypal.com/cgi-bin/webscr'
+
+
+
 [frontend]
 
     ;messages
@@ -80,3 +93,5 @@
     NUMBER_ZERO = 0
     NUMBER_ONE = 1
     NUMBER_TWO = 2
+    NUMBER_THRE = 3
+    NUMBER_FIVE = 5
