[up] tracker and order list

--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -23,7 +23,8 @@
     USER = postgres
 
     ;encryption
-    ENCRYPT_SALT = F1u2L3o@4P5a6t7c8h9W0o1r2k3 ; salt used to encrypt data.
+    ;salt used to encrypt data.
+    ENCRYPT_SALT = F1u2L3o@4P5a6t7c8h9W0o1r
 
     ;data for farevalue and delivery
     BOX_DELIVERY_MIN_LENGTH = 16
@@ -69,8 +70,12 @@
     MSG0011 = 'Você precisa cadastrar o endereço para entrega antes de efetuar a compra.'
     MSG0012 = 'O CEP pesquisado tem que ser igual ao CEP cadastrado no perfil.'
     MSG0013 = 'O correu um erro durante a operação. Por favor tente novamente em instantes.'
+    MSG0014 = 'Obrigado por comprar na Fulo Patchwork! Sua compra foi realizada com sucesso!'
 
 [both]
+
+    ;messages
+    MSG0015 = 'Erro obtido no serviço dos correios. Tente novamente em instantes.'
 
     ;profile
     PROFILE_ADMINISTRATOR = 1
@@ -80,6 +85,7 @@
     ;status
     STATUS_ACTIVE = 1
     STATUS_INACTIVE = 2
+    ORDER_DISPATCHED = "Pedido Enviado"
 
     ;results
     ERROR = Ocorreu um erro
@@ -88,6 +94,7 @@
     WISHLIST_ALREADY = Desejo Existente
     WITHOUT_RESULT = Sem resultado
     PRODUCT_TYPE_BUSY = Tipo em uso
+    ERROR_FARE_VALUE = 'Serviço dos Correios está fora de ar. Tente novamente em instantes.'
 
     ;numbers
     NUMBER_ZERO = 0
@@ -95,3 +102,4 @@
     NUMBER_TWO = 2
     NUMBER_THRE = 3
     NUMBER_FIVE = 5
+    NUMBER_TEN = 10
