--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -31,11 +31,6 @@
     BOX_DELIVERY_MIN_WIDTH = 11
     BOX_DELIVERY_MIN_HEIGHT = 2
     BOX_DELIVERY_MIN_WEIGHT = 001
-    BOX_DELIVERY_MAX_LENGTH = 105
-    BOX_DELIVERY_MAX_WIDTH = 105
-    BOX_DELIVERY_MAX_HEIGHT = 105
-    BOX_DELIVERY_MAX_WEIGHT = 30
-    BOX_DELIVERY_MAX_PACKAGE_SIZE = 200
     BOX_DELIVERY_BEST_LENGTH = 80
     BOX_DELIVERY_BEST_WIDTH = 80
     BOX_DELIVERY_BEST_HEIGHT = 9
@@ -70,7 +65,7 @@
     MSG0011 = 'Você precisa cadastrar o endereço para entrega antes de efetuar a compra.'
     MSG0012 = 'O CEP pesquisado tem que ser igual ao CEP cadastrado no perfil.'
     MSG0013 = 'O correu um erro durante a operação. Por favor tente novamente em instantes.'
-    MSG0014 = 'Obrigado por comprar na Fulo Patchwork! Sua compra foi realizada com sucesso!'
+    MSG0014 = 'Muito obrigado por comprar na Fulo Patchwork :)'
 
 [both]
 
@@ -95,6 +90,7 @@
     WITHOUT_RESULT = Sem resultado
     PRODUCT_TYPE_BUSY = Tipo em uso
     ERROR_FARE_VALUE = 'Serviço dos Correios está fora de ar. Tente novamente em instantes.'
+    ERROR_PAYMENT = 'Erro no serviço de pagamento.'
 
     ;numbers
     NUMBER_ZERO = 0
@@ -103,3 +99,10 @@
     NUMBER_THRE = 3
     NUMBER_FIVE = 5
     NUMBER_TEN = 10
+
+    ;correios
+    BOX_DELIVERY_MAX_LENGTH = 105
+    BOX_DELIVERY_MAX_WIDTH = 105
+    BOX_DELIVERY_MAX_HEIGHT = 105
+    BOX_DELIVERY_MAX_WEIGHT = 30
+    BOX_DELIVERY_MAX_PACKAGE_SIZE = 200
