--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -43,11 +43,10 @@
     PAYPAL_SIGNATURE = 'AZIcjJZn87JqIU7WrCzwyhDK1f92AvpiPkiSUC9il1RbLSAVcDNq8si4'
     PAYPAL_URL = 'https://www.sandbox.paypal.com/cgi-bin/webscr'
     PAYPAL_VERSION = '108.0'
+    PAYPAL = '1'
 
     ;production
     ;PAYPAL_URL = 'https://www.paypal.com/cgi-bin/webscr'
-
-
 
 [frontend]
 
@@ -97,7 +96,9 @@
     NUMBER_ONE = 1
     NUMBER_TWO = 2
     NUMBER_THRE = 3
+    NUMBER_FOUR = 4
     NUMBER_FIVE = 5
+    NUMBER_NINE = 9
     NUMBER_TEN = 10
 
     ;correios
