--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -100,6 +100,7 @@
     NUMBER_FIVE = 5
     NUMBER_NINE = 9
     NUMBER_TEN = 10
+    NUMBER_THRETEEN = 13
     NUMBER_FOURTEEN = 14
 
     ;correios
