--- a/rest/application/config/constants.ini
+++ b/rest/application/config/constants.ini
@@ -102,6 +102,7 @@
     NUMBER_TEN = 10
     NUMBER_THRETEEN = 13
     NUMBER_FOURTEEN = 14
+    NUMBER_FIVETEEN = 15
 
     ;correios
     BOX_DELIVERY_MAX_LENGTH = 105
